[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/fp_fifties_piece.gd" type="Script" id=1]
[ext_resource path="res://sprites/new/watch/watch_plane.png" type="Texture" id=2]
[ext_resource path="res://sprites/new/watch/watch_outer.png" type="Texture" id=3]
[ext_resource path="res://sprites/new/watch/watch_middle.png" type="Texture" id=4]
[ext_resource path="res://sprites/new/watch/watch_inner.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]

resource_name = "rotate_1"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "rotate_2"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 90.0 ]
}

[sub_resource type="Animation" id=4]

resource_name = "rotate_3"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 135.0 ]
}

[sub_resource type="Animation" id=5]

resource_name = "rotate_4"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 135.0, 180.0 ]
}

[sub_resource type="Animation" id=6]

resource_name = "rotate_5"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 225.0 ]
}

[sub_resource type="Animation" id=7]

resource_name = "rotate_6"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 225.0, 270.0 ]
}

[sub_resource type="Animation" id=8]

resource_name = "rotate_7"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 315.0 ]
}

[sub_resource type="Animation" id=9]

resource_name = "rotate_8"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 315.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 81.1996, 80.7374 )

[node name="fp_fifties_piece" type="Area2D"]

z_index = 40
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable", "Z Index" ]

[node name="watch_plane" type="Sprite" parent="." index="0"]

z_index = 45
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="watch_outer" type="Sprite" parent="." index="1"]

rotation = 6.28319
z_index = 50
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="outer_anim" type="AnimationPlayer" parent="watch_outer" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate_1 = SubResource( 2 )
anims/rotate_2 = SubResource( 3 )
anims/rotate_3 = SubResource( 4 )
anims/rotate_4 = SubResource( 5 )
anims/rotate_5 = SubResource( 6 )
anims/rotate_6 = SubResource( 7 )
anims/rotate_7 = SubResource( 8 )
anims/rotate_8 = SubResource( 9 )
blend_times = [  ]

[node name="watch_middle" type="Sprite" parent="." index="2"]

z_index = 55
texture = ExtResource( 4 )
_sections_unfolded = [ "Z Index" ]

[node name="middle_anim" type="AnimationPlayer" parent="watch_middle" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate_1 = SubResource( 2 )
anims/rotate_2 = SubResource( 3 )
anims/rotate_3 = SubResource( 4 )
anims/rotate_4 = SubResource( 5 )
anims/rotate_5 = SubResource( 6 )
anims/rotate_6 = SubResource( 7 )
anims/rotate_7 = SubResource( 8 )
anims/rotate_8 = SubResource( 9 )
blend_times = [  ]

[node name="watch_inner" type="Sprite" parent="." index="3"]

z_index = 60
texture = ExtResource( 5 )
_sections_unfolded = [ "Z Index" ]

[node name="inner_anim" type="AnimationPlayer" parent="watch_inner" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/rotate_1 = SubResource( 2 )
anims/rotate_2 = SubResource( 3 )
anims/rotate_3 = SubResource( 4 )
anims/rotate_4 = SubResource( 5 )
anims/rotate_5 = SubResource( 6 )
anims/rotate_6 = SubResource( 7 )
anims/rotate_7 = SubResource( 8 )
anims/rotate_8 = SubResource( 9 )
blend_times = [  ]

[node name="shape" type="CollisionShape2D" parent="." index="4"]

z_index = 65
shape = SubResource( 1 )
_sections_unfolded = [ "Z Index" ]

[connection signal="input_event" from="." to="." method="_on_fp_fifties_piece_input_event"]


